--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <body>
     <h1>This is a header</h1>
     <p>This is a para</p>
-    <p>this is second para</p>
+    <p>this is 2nd para</p>
   </body>
 </html>
